Regator: used toList instead of collect